# kurs_oop

./: Ball.cpp  Ball.h  Board.cpp  Board.h  CMakeLists.txt  Data.cpp  Data.h  Design.cpp  Design.h  Rectangle.cpp  Rectangle.h  general.cpp  general.h  level_constructor.cpp  main.cpp
